feat: melhora validacoes, respostas http e rotas da biblioteca